core/tests/snapshots/run_scripts__internal.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (internal), \".rain\"))"
---
Ok
String(
    "foo7false",
)
