core/tests/snapshots/run_scripts__internal_import.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (internal_import), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        16,
    ),
)
