core/tests/snapshots/run_scripts__internal_print.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (internal_print), \".rain\"))"
---
Ok
Unit
