core/tests/snapshots/run_scripts__local_type_spec.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (local_type_spec), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        6,
    ),
)
