core/tests/snapshots/run_scripts__local_var.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (local_var), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        4,
    ),
)
