core/tests/snapshots/run_scripts__regex_replace.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (regex_replace), \".rain\"))"
---
Ok
String(
    "elephant <> <> dog <>",
)
