core/tests/snapshots/run_scripts__string_add.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (string_add), \".rain\"))"
---
Ok
String(
    "helloworld",
)
